# django

./: .gitignore  .gitignore_global  .startup.sh  Dockerfile  db.sqlite3  manage.py  models.py  pyproject.toml  settings.py  startup
Shop/: admin.py  consumers  models.py  routing  views.py
Shop/migrations/: 0001_initial.py  0002_alter_organization_description_and_more.py
blog/: asgi.py  middleware  settings.py  urls.py
shop/: admin.py  consumers.py  models.py  routing  routing.py  serializers.py  tasks.py  urls.py  views.py
shop/migrations/: 0001_initial.py
shops_online/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
static/: script.js  styles.css
templates/admin/: base_site  base_site.html  styles
